charts/httpbin/ingress.yaml
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: httpbin-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: httpbin
#             port:
#               number: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: httpbin
          servicePort: 80
